app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: frantisek-hello
spec:
  ingressClassName: nginx
  rules:
  - host: test.aura.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-svc
            port:
              number: 80
